# wgpu-tutorial

./: Cargo.toml  README.md
.cargo/: config.toml
src/: camera.rs  light.wgsl  main.rs  model.rs  shader.wgsl  texture.rs
